<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tema"
        android:textSize="20sp"
        android:textColor="#2874A6"
        android:layout_gravity="center"/>

    <TextView
        android:text="@string/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/xet1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint1"/>

    <TextView
        android:text="@string/apellidop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/xet2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint2"/>

    <TextView
        android:text="@string/apellidom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/xet3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint3"/>

    <Button
        android:id="@+id/xbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:layout_gravity="center"/>
</LinearLayout>